--- a/RosellaInterpreter/RosellaInterpreter/RosellaInterpreter.csproj
+++ b/RosellaInterpreter/RosellaInterpreter/RosellaInterpreter.csproj
@@ -43,6 +43,10 @@
   <ItemGroup>
     <Compile Include="AstPrinter.cs" />
     <Compile Include="Ast\Expr.cs" />
+    <Compile Include="Ast\Stmt.cs" />
+    <Compile Include="RosellaEnvironment.cs" />
+    <Compile Include="Interpreter.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner.cs" />
     <Compile Include="StringExtensions.cs" />
